# libsala

./: CMakeLists.txt  LICENSE.txt  README.md
include/sala/: analyzer.hpp  exec_state.hpp  extern_code.hpp  extern_code_cstd.hpp  input_flow.hpp  instr_switch.hpp  interpreter.hpp  memblock.hpp  platform_specifics.hpp  pointer_model.hpp  pointer_model_default.hpp  pointer_model_m32.hpp  program.hpp  sanitizer.hpp  streaming.hpp
src/: analyzer.cpp  exec_state.cpp  extern_code.cpp  extern_code_cstd.cpp  input_flow.cpp  instr_switch.cpp  interpreter.cpp  memblock.cpp  pointer_model_m32.cpp  program.cpp  sanitizer.cpp  streaming_load.cpp  streaming_save.cpp
